--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-# Compiled JavaScript files
-lib/**/*.js
-lib/**/*.js.map
-
-# TypeScript v1 declaration files
-typings/
-
-# Node.js dependency directory
-node_modules/
-*.local
+node_modules
+dist
+.env
+npm-debug.log
+logs
+*.log
+.DS_Store
