--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "ssh2-sftp-client": "^10.0.3",
     "csv-parse": "^5.5.3",
-    "node-cron": "^3.0.3"
+    "dotenv": "^16.3.1",
+    "firebase-admin": "^13.6.0",
+    "node-cron": "^3.0.3",
+    "ssh2-sftp-client": "^10.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "@types/ssh2-sftp-client": "^9.0.3",
     "@types/node-cron": "^3.0.11",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2"
+    "@types/ssh2-sftp-client": "^9.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
