--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "csv-parse": "^5.5.3",
     "dotenv": "^16.3.1",
+    "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "node-cron": "^3.0.3",
     "ssh2-sftp-client": "^10.0.3"
